# fps_3d

./: .gitignore  CMakeLists.txt  README.md
dependencies/GLAD/: CMakeLists.txt
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/source/: glad.c
dependencies/STB_IMAGE/: CMakeLists.txt
old_code/: skybox_data.hpp
resources/config/: settings.txt
resources/shaders/: grass.frag.glsl  grass.vert.glsl  mesh.frag.glsl  mesh.vert.glsl  rectangle.frag.glsl  rectangle.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  text.frag.glsl  text.vert.glsl
source/: application.cpp  application.hpp  defines.hpp  main.cpp  sdl_include.hpp  utils.cpp  utils.hpp  vvtypes.hpp
source/core/: camera.cpp  camera.hpp  config.cpp  config.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  settings.cpp  settings.hpp  timer.hpp  window.hpp
source/game/: player_controller.cpp  player_controller.hpp  scene.hpp  state_base.hpp  state_menu.cpp  state_menu.hpp
source/graphics/: cubemap_texture.cpp  gldebug.cpp  grass.cpp  grass.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderer2d.cpp  renderer2d.hpp  renderer3d.cpp  renderer3d.hpp  shader.cpp  shader.hpp  skybox_data.cpp  texture2d.cpp  window.cpp  window.hpp
source/graphics/api/: cubemap_texture.cpp  framebuffer.cpp  framebuffer.hpp  gldebug.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture2d.cpp  texture2d.hpp  vertex_array.cpp  vertex_array.hpp
source/ui/: menu.cpp  menu.hpp  primitives.cpp  primitives.hpp  ui_instance.hpp  ui_primitives.hpp
